stylesheets/style.css
body {
    background-color: rgb(235, 235, 207);
}

h1 {
    font-family: 'Times New Roman', Times, serif;
    font-size: 30px;
    font-weight: bolder;
    margin: 20px;
}

p {
    font-family: 'Times New Roman', Times, serif;
    margin: 20; 
}

ul.nav_bar{
    list-style-type: none;
    margin: 0;
    padding: 0;
    display: flex;
    border: 2px dashed white;
    background-color: rgb(143, 99, 138);
}

ul.nav_bar li {
    float: left;
}

ul.nav_bar li a {
    display: block;
    color: white;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

ul.nav_bar li a:hover {
    background-color: rgb(93, 67, 112);
    color: white;
}

.homepage_hero_image{
    background-image: url('../images/lovely.png');
    height: 250px;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
}

.menu_hero_image{
    background-image: url('../images/Menu.png');
    height: 250px;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
}

.contact_hero_image{
    background-image: url('../images/ContactUs.png');
    height: 250px;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
}

.animontronics_hero_image{
    background-image: url('../images/Animontronics.png');
    height: 250px;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
}

.terms_and_conditions_hero_image{
    background-image: url('../images/TermsAndConditions.png');
    height: 250px;
    background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    position: relative;
}

footer {
    background-color: rgb(143, 99, 138);
    color: white;
    text-align: center;
    padding: 10px;
    position: relative;
    bottom: 0;
    width: 100%;
    margin-top: 20px;
}

